统一样式的引用方式

--- a/src/components/IframeWrapper/style.less
+++ b/src/components/IframeWrapper/style.less
@@ -1,7 +1,5 @@
-.iframe {
-  // 主要的iframe内容区域的样式
-  &-content {
-    width: 100%;
-    height: calc(100vh - 64px - 72px - 30px);
-  }
+.content {
+  width: 100%;
+  height: calc(100vh - 64px - 72px - 30px);
 }
+
